# SibSUTIS_summer_camp

./: c_cpp_properties.json  launch.json  settings.json  tasks.json
lab1/: CMakeLists.txt  test_mult.cpp
lab1/calc_mult_time/: calc_mult_time.cpp  calc_mult_time.h
lab1/fft/: fft.cpp  fft.h
lab1/mult/: mult.cpp  mult.h
lab1/quick_mult/: quick_mult.cpp  quick_mult.h
lab2/: main_lab2.cpp
